Change styles for small heights - there was a bug on mobile devices, where appearing keyboard was making part of content invisible

--- a/src/project1/styles/themes/default/components/footer.scss
+++ b/src/project1/styles/themes/default/components/footer.scss
@@ -74,3 +74,9 @@
         width: 25%;
     }
 }
+
+@media only screen and (max-height: 380px){
+	.footer{
+		display: none;
+	}
+}
